<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalisisGeneral"
    android:layout_margin="3dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:baselineAligned="true">

                <Button

                    android:id="@+id/btn1"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue2"
                    android:onClick="agen"
                    android:text="@string/bt1"
                    app:icon="@drawable/ic_general" />

                <Button

                    android:id="@+id/btn2"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue2"
                    android:onClick="agra"
                    android:text="@string/bt2"
                    app:icon="@drawable/ic_chart" />

                <Button

                    android:id="@+id/btn3"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue2"
                    android:onClick="aesp"
                    android:text="@string/bt3"
                    app:icon="@drawable/ic_especifico" />
            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="800dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="800dp"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/Tit1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:autoSizeTextType="uniform"
                    android:text="@string/bt3"
                    android:textAlignment="center"
                    android:textColor="@color/green1"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat,SmallSp"
                    tools:targetApi="o" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />
                <TextView
                    android:id="@+id/TextSubTite"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/textsubesp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="RtlCompat,SmallSp"
                    tools:targetApi="o" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />
                <TextView
                    android:id="@+id/difcost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TitDif"
                    android:textColor="@color/blue3"
                    android:textStyle="bold"
                    android:textSize="15dp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />
                <TextView
                    android:id="@+id/SalidaDifCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="inherit"
                    android:textSize="14dp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        />
                    <TextView
                        android:id="@+id/AnPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/AnPrecio"
                        android:textColor="@color/blue3"
                        android:textStyle="bold"
                        android:textSize="15dp" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        />
                    <TextView
                        android:id="@+id/SalidaAnPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="inherit"
                        android:textSize="14dp" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        />
                    <TextView
                        android:id="@+id/CompPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compPrecio"
                        android:textColor="@color/blue3"
                        android:textStyle="bold"
                        android:textSize="15dp" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        />
                    <TextView
                        android:id="@+id/SalidaCompPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="inherit"
                        android:textSize="14dp" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >
                        <Space
                            android:layout_width="100dp"
                            android:layout_height="20dp"
                            />
                        <ImageView
                        android:id="@+id/Imageae"
                        android:layout_width="200dp"
                        android:layout_height="200dp"

                        />
                    </LinearLayout>


                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnVol"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="150dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/BLUE1"
                    android:onClick="volver"
                    android:text="@string/volver" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>